--- a/www/public/assets/css/material-dashboard.css
+++ b/www/public/assets/css/material-dashboard.css
@@ -238,6 +238,12 @@ h1,
   color: var(--bs-heading-color);
 }
 
+.no-shadow-label::before,
+.no-shadow-label::after {
+  box-shadow: none !important;
+  border-top-color: transparent !important;
+}
+
 h1,
 .h1 {
   font-size: calc(1.425rem + 2.1vw);
